{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 17,
  "lineage": "d4c97c3e-c2ff-234e-8d48-0bcbdac5912b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Redhat_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0402e56c0a7afb78f",
            "arn": "arn:aws:ec2:ap-south-1:225989340431:instance/i-0c4d9a069f14c06c7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4d9a069f14c06c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0de7ce758d1091d2f",
            "private_dns": "ip-10-0-1-89.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.89",
            "public_dns": "ec2-3-111-169-47.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.169.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0de3a0685ff4d688e",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b173be8eea3efec5",
            "tags": {
              "Name": "redhat-Instance"
            },
            "tags_all": {
              "Name": "redhat-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f054ae3d407cdb97"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_subnet.terra_subnet",
            "aws_vpc.vpc_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06031e2c49c278c8f",
            "arn": "arn:aws:ec2:ap-south-1:225989340431:instance/i-08951fed7ccd6030f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08951fed7ccd6030f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07cdf394875ce8b13",
            "private_dns": "ip-10-0-2-101.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.101",
            "public_dns": "ec2-65-0-173-34.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.173.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079722814fc9d4034",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00550a3543bfb39bb",
            "tags": {
              "Name": "amazon-2-instance"
            },
            "tags_all": {
              "Name": "amazon-2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f054ae3d407cdb97"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_subnet.terra_subnet_2",
            "aws_vpc.vpc_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225989340431:internet-gateway/igw-02e031d802a6943ef",
            "id": "igw-02e031d802a6943ef",
            "owner_id": "225989340431",
            "tags": {
              "name": "terra-igw"
            },
            "tags_all": {
              "name": "terra-igw"
            },
            "vpc_id": "vpc-06592ea7d74010c27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225989340431:route-table/rtb-0d881d336834971fb",
            "id": "rtb-0d881d336834971fb",
            "owner_id": "225989340431",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e031d802a6943ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public-rt",
              "service": "Terraform"
            },
            "tags_all": {
              "name": "public-rt",
              "service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06592ea7d74010c27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0122a4402d29dd99d",
            "route_table_id": "rtb-0d881d336834971fb",
            "subnet_id": "subnet-0b173be8eea3efec5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.public-rt",
            "aws_subnet.terra_subnet",
            "aws_vpc.vpc_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-Terraform_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a81e7ba3f420b2f",
            "route_table_id": "rtb-0d881d336834971fb",
            "subnet_id": "subnet-00550a3543bfb39bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.public-rt",
            "aws_subnet.terra_subnet_2",
            "aws_vpc.vpc_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225989340431:security-group/sg-0f054ae3d407cdb97",
            "description": "allow ports for vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f054ae3d407cdb97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-sg",
            "name_prefix": "",
            "owner_id": "225989340431",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allow_all"
            },
            "tags_all": {
              "name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-06592ea7d74010c27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225989340431:subnet/subnet-0b173be8eea3efec5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b173be8eea3efec5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "225989340431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "subnet1"
            },
            "tags_all": {
              "name": "subnet1"
            },
            "vpc_id": "vpc-06592ea7d74010c27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225989340431:subnet/subnet-00550a3543bfb39bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00550a3543bfb39bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "225989340431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "subnet2"
            },
            "tags_all": {
              "name": "subnet2"
            },
            "vpc_id": "vpc-06592ea7d74010c27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_terraform",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225989340431:vpc/vpc-06592ea7d74010c27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0168c59cee2178ac7",
            "default_route_table_id": "rtb-0f1e040874563317e",
            "default_security_group_id": "sg-0a6c600e512f91d1d",
            "dhcp_options_id": "dopt-0019f70510bb31e7d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06592ea7d74010c27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1e040874563317e",
            "owner_id": "225989340431",
            "tags": {
              "name": "test_vpc"
            },
            "tags_all": {
              "name": "test_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}